<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
    <item
        android:id="@+id/action_enablePerm"
        android:title="@string/action_enablePerm" />

    <item
        android:id="@+id/action_enableBl"
        android:title="@string/action_enableBl" />

    </group>

    <item
        android:id="@+id/action_blActivity"
        android:title="@string/action_blActivity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bleScan"
        android:title="@string/action_bleScan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>